# linux-pc-config

./: .ansible-lint-ignore  .gitignore  README.md  pyproject.toml
playbooks/: apps.yml  dotfiles.yml  fonts.yml  games.yml  gnome.yml  installers.yml  keyboard.yml  multimedia.yml  site.yml  system.yml  video-acceleration.yml  zsh.yml
playbooks/apps/: apps.yml  librewolf.yml  misc.yml  python.yml  rust.yml  vscode.yml  zsh.yml
playbooks/apps/files/: librewolf-policies.json
playbooks/files/: librewolf-policies.json
playbooks/system/: fonts.yml  gnome.yml  installers.yml  misc.yml  multimedia.yml  spellcheckers.yml  system.yml  video-acceleration.yml
playbooks/system/gnome/: enable_extension.yml  extensions.yml  gnome.yml  init.yml  keybindings.yml  misc.yml  wallpaper.yml
playbooks/user/: filesystem.yml  user.yml
