[project]
name = "linux-pc-config"
description = "Configuration of my Linux PC."
version = "0.0.0" # A version is required but there's nothing to build here.
readme = "README.md"
requires-python = ">=3.13"
keywords = ["linux", "configuration", "fedora", "ansible"]

authors = [ { name = "Nathan Rousseau", email = "le-chartreux-vert@protonmail.com" } ]

dependencies = ["ansible>=11.4.0"]

[dependency-groups]
dev = ["ansible-dev-tools>=26.1.0"]

[project.urls]
Repository = "https://github.com/le-chartreux/linux-pc-config.git"
Issues = "https://github.com/le-chartreux/linux-pc-config/issues"
